fixed previous style for ul li, bulletpoints removed, created spacing and altered size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,11 @@ header {
         letter-spacing: 2px;
         color: #252525;
     }
+    #menu {
+        font-size: 110%;
+        letter-spacing: 4px;
+        list-style-type: none;
+    }
 /* Main content */
 main {
     background-color: lightblue;
